compiler/tests-spec/testData/psi/templates/identifiers/typeAlias.kt
typealias <!ELEMENT!> = Boolean

private typealias <!ELEMENT!><T> = List<T>

internal typealias <!ELEMENT!><<!ELEMENT!>> = Map<<!ELEMENT!><<!ELEMENT!>>, List<<!ELEMENT!>>>
